# Ethi-AmbRoT

./: .gitignore  README.md  common_eval_utils.py  generate_rot_dataset.py  pyproject.toml  requirements.txt  run_doubao_eval.py  run_glm_eval.py  run_gpt_eval.py  run_qwen_eval.py
data/: Chambi_benchmark_compact.json  Chambi_rot_enhanced.json  ethi_ambrot.json  ethi_ambrot_benchmark_compact.json
ethi_ambrot/: __init__.py  common_eval_utils.py  eval_prompt.py  judge_prompt.py  phase2_main.py
scripts/: README.md  generate_rot_dataset.py  run_doubao_eval.py  run_glm_eval.py  run_gpt_eval.py  run_qwen_eval.py
scripts/dataset/: export_predictions_json.py  generate_rot_dataset.py
scripts/evaluation/: evaluate_overall.py  evaluate_phase1.py  evaluate_phase2_judge.py  evaluate_phase2_main.py
scripts/llm/: run_doubao_eval.py  run_glm_eval.py  run_gpt_eval.py  run_qwen_eval.py
