[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethi-ambrot"
version = "0.1.0"
description = "Ethi-AmbRoT multi-model benchmark evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
include = ["ethi_ambrot*"]
